# rossmann-forecast

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: rossmann_forecast_colab.ipynb
reports/: summary.md
src/rossmann_forecast/: __init__.py  cli.py  config.py  evaluate.py  metrics.py
src/rossmann_forecast/data/: download.py  load.py
src/rossmann_forecast/features/: engineer.py
src/rossmann_forecast/models/: baseline.py  entity_embeddings.py  gbm.py
src/rossmann_forecast/serve/: api.py
tests/: test_api_health.py  test_cli_imports.py  test_config.py  test_features.py  test_metrics.py
