[project]
name = "rossmann-forecast"
version = "0.1.0"
description = "Reproducing 'Entity Embeddings of Categorical Variables' (Guo & Berkhahn, 2016) on Kaggle Rossmann Store Sales, against seasonal-naive and LightGBM baselines."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon Yosboon" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
    "torch>=2.4",
    "matplotlib>=3.9",
    "mlflow>=2.17",
    "typer>=0.12",
    "rich>=13.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "kaggle>=1.6",
    "tqdm>=4.66",
    "tabulate>=0.9",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "httpx>=0.27",
]

[project.scripts]
forecast = "rossmann_forecast.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rossmann_forecast"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
